--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -7,36 +7,36 @@
     <title>Title</title>
 </head>
 <body>
-<div class="login-container">
-  <div class="login-card">
-    <div class="text-center mb-4">
-      <h2 class="mb-3">Welcome Back</h2>
-      <p class="text-muted">Please enter your login credentials</p>
-    </div>
-    <form id="loginForm">
-      <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="text" class="form-control" id="email" required>
-        <div class="invalid-feedback">Please enter your email</div>
-      </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" required>
-        <div class="invalid-feedback">Please enter your password</div>
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="rememberMe">
-        <label class="form-check-label" for="rememberMe">Remember me</label>
-      </div>
-      <button type="submit" class="btn btn-login w-100">Login</button>
+<div class="container d-flex justify-content-center align-items-center min-vh-100">
+  <div class="card shadow-lg border-0 rounded-4 p-4 w-100" style="max-width: 400px;">
+    <div class="card-body">
+      <h2 class="fw-bold text-center">Login</h2>
+      <p class="text-muted text-center">Welcome back! Log in to continue.</p>
+
+      <form id="loginForm" class="mt-3">
+        <div class="mb-3">
+          <label for="email" class="form-label fw-semibold">Email</label>
+          <input type="email" class="form-control rounded-3" id="email" placeholder="Enter your email" required>
+          <div class="invalid-feedback">Please enter a valid email.</div>
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label fw-semibold">Password</label>
+          <input type="password" class="form-control rounded-3" id="password" placeholder="Enter your password" required>
+          <div class="invalid-feedback">Please enter your password.</div>
+        </div>
+        <button type="submit" class="btn btn-primary w-100 rounded-pill">Log in</button>
+      </form>
+
       <div class="text-center mt-3">
-        <a href="#" class="text-muted text-decoration-none">Forgot Password?</a>
+        <a href="#" class="text-decoration-none text-muted">Forgot password?</a> |
+        <a href="#" class="text-decoration-none">Register</a>
       </div>
-    </form>
+    </div>
   </div>
 </div>
 
 <script src="./js/login.js"></script>
+<script src="https://kit.fontawesome.com/YOUR_FONT_AWESOME_KIT.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
