--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="../css/register.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <title>Register</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/login.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Login</title>
 </head>
 <body>
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
   <div class="card shadow-lg border-0 rounded-4 p-4 w-100" style="max-width: 400px;">
     <div class="card-body">
       <h2 class="fw-bold text-center">Login</h2>
-      <p class="text-muted text-center">Welcome! Register to continue.</p>
-      <p class="text-danger text-center" id="invalid-cred">Invalid credentials!</p>
+      <p class="text-muted text-center">Welcome back! Log in to continue.</p>
+      <p class="text-danger text-center" id="invalid-cred">Invalid Email or Password!</p>
 
-      <form id="registerForm" class="mt-3">
+      <form id="loginForm" class="mt-3">
         <div class="mb-3">
           <label for="email" class="form-label fw-semibold">Email</label>
           <input type="email" class="form-control rounded-3" id="email" placeholder="Enter your email" required>
@@ -30,14 +30,13 @@
 
       <div class="text-center mt-3">
         <a href="#" class="text-decoration-none text-muted">Forgot password?</a> |
-        <a href="#" class="text-decoration-none">Register</a>
+        <a href="register.html" class="text-decoration-none">Register</a>
       </div>
     </div>
   </div>
 </div>
 
-<script src="../js/register.js"></script>
-<script src="https://kit.fontawesome.com/YOUR_FONT_AWESOME_KIT.js" crossorigin="anonymous"></script>
+<script src="js/login.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
