Added OAuth2 login.

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -32,6 +32,13 @@
         <a href="#" class="text-decoration-none text-muted">Forgot password?</a> |
         <a href="register.html" class="text-decoration-none">Register</a>
       </div>
+      <hr>
+      <div class="text-center mt-3">
+        <button id="google-login-btn" class="google-btn">
+          <img src="https://developers.google.com/identity/images/g-logo.png" alt="Google Logo">
+          Sign in with Google
+        </button>
+      </div>
     </div>
   </div>
 </div>
