Changed first and lastname to display name.

--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -16,14 +16,9 @@
 
         <form id="registerForm" class="mt-3">
           <div class="mb-3">
-            <label for="fname" class="form-label fw-semibold">First Name</label>
-            <input type="text" class="form-control rounded-3" id="fname" placeholder="Enter your first name" required>
-            <div class="invalid-feedback">Please enter your first name.</div>
-          </div>
-          <div class="mb-3">
-            <label for="lname" class="form-label fw-semibold">Last Name</label>
-            <input type="text" class="form-control rounded-3" id="lname" placeholder="Enter your last name" required>
-            <div class="invalid-feedback">Please enter your last name.</div>
+            <label for="dName" class="form-label fw-semibold">Display name</label>
+            <input type="text" class="form-control rounded-3" id="dName" placeholder="Enter your display name" required>
+            <div class="invalid-feedback">Please enter your display name.</div>
           </div>
           <div class="mb-3">
             <label for="email" class="form-label fw-semibold">Email</label>
